[package]
name = "stalloc"
version = "0.4.1"
edition = "2024"
repository = "https://github.com/abgros/stalloc"
description = "Stalloc is a fast first-fit memory allocator that you can use to quickly speed up your Rust programs."
license = "MIT"

[dependencies]

[features]
default = ["sync_stalloc", "allocator_api"]
allocator_api = []
sync_stalloc = []