[package]
name = "stalloc"
version = "0.5.0"
edition = "2024"
repository = "https://github.com/abgros/stalloc"
description = "Stalloc is a fast first-fit memory allocator that you can use to quickly speed up your Rust programs."
license = "MIT"

[dependencies]

[features]
default = ["std"]
allocator-api = []
std = []

[[example]]
name = "fast_vectors"

[[example]]
name = "local_alloc"
required-features = ["allocator-api"]

[[example]]
name = "local_string"
required-features = ["allocator-api"]

[[example]]
name = "threaded"
required-features = ["allocator-api", "std"]